system integration progress